added target tuple loading to Server.py

--- a/web/chat/scripts/extract_object_segs.ipynb
+++ b/web/chat/scripts/extract_object_segs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,10 @@
     "                    all_objs.append(obj)\n",
     "\n",
     "print(\"trimmed from %d unique objects to %d\" % (orig_obj_count, len(all_objs)))\n",
-    "house_obj_data = trimmed_house_obj_data"
+    "house_obj_data = trimmed_house_obj_data\n",
+    "\n",
+    "# TODO: Load connectivity maps and trim objects for being too close together\n",
+    "# TODO: and thus not sufficiently ambiguous."
    ]
   },
   {
@@ -708,6 +711,366 @@
     "ax.set(yscale=\"log\")\n",
     "g.set_xticklabels(g.get_xticklabels(), rotation=90)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 91/91 [00:00<00:00, 2458.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/jdtho/shiner/v1/scans/JmbYfDe2QKZ/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/gZ6f7yhEvPG/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/WYY7iVyf5p8/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/rqfALeAoiTq/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/UwV83HsGsw3/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/mJXqzFtmKg4/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/ur6pFq6Qu1A/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/rPc6DW4iMge/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/D7G3Y4RVNrH/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/RPmz2sHmrrY/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/sKLMLpTHeUy/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/s8pcmisQ38h/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/q9vSo1VnCiC/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/82sE5b5pLXE/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/e9zR4mvMWw7/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/qoiz87JEwZ2/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/Uxmj2M2itWa/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/x8F5xyUWy9e/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/kEZ7cmS4wCh/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/pLe4wQe7qrG/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/HxpKQynjfin/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/X7HyMhZNoso/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/zsNo4HB9uLZ/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/ARNzJeq3xxb/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/PuKPg4mmafe/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/JF19kD82Mey/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/VVfe2KiqLaN/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/V2XKFyX4ASd/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/ULsKaCPVFJR/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/gTV8FGcVJC9/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/1LXtFkjw3qL/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/2t7WUuJeko7/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/1pXnuDYAj8r/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/wc2JMjhGNzB/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/fzynW3qQPVF/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/jh4fc5c5qoQ/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/D7N2EKCX4Sj/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/Z6MFQCViBuw/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/VLzqgDo317F/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/2n8kARJN3HM/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/2azQ1b91cZZ/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/vyrNrziPKCB/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/QUCTc6BB5sX/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/759xd9YjKW5/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/XcA2TqTSSAj/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/SN83YJsR3w2/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/r1Q1Z4BcV1o/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/oLBMNvg9in8/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/YmJkqBEsHnH/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/5LpN3gDmAk7/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/B6ByNegPMKs/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/sT4fr6TAbpF/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/YVUC4YcDtcY/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/dhjEzFoUFzH/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/GdvgFV5R1Z5/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/VzqfbhrpDEA/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/ZMojNkEp431/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/gYvKGZ5eRqb/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/17DRP5sb8fy/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/matterport_skybox_images/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/TbHJrupSAjP/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/EDJbREhghzL/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/ac26ZMwG7aT/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/r47D5H71a5s/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/pa4otMbVnkk/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/EU6Fwq7SyZv/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/jtcxE69GiFV/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/i5noydFURQK/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/gxdoqLR6rwA/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/E9uDoFAP3SH/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/5q7pvUzZiYa/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/aayBHfsNo7d/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/b8cTxDM8gDG/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/8WUmhLawc2A/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/JeFG25nYj2p/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/yqstnuAEVhm/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/Vvot9Ly1tCj/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/p5wJjkQkbXX/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/cV4RVeZvu5T/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/5ZKStnWn8Zo/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/8194nk5LbLH/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/Vt2qJdWjCF2/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/PX4nDJXEHrG/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/VFuaQ6m2Qom/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/pRbA3pwrgk9/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/uNb9QFRL6hY/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/S9hNv5qa7GM/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/Pm6F8kyY3z2/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/29hnd4uzFmX/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/7y3sRwLe3Va/matterport_skybox_images\n",
+      "/media/jdtho/shiner/v1/scans/YFuZgdQ5vWj/matterport_skybox_images\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unzip skybox images.\n",
+    "for house in tqdm.tqdm(houses):\n",
+    "    skybox_dir = os.path.join(disk_loc, house, \"matterport_skybox_images\")\n",
+    "    print(skybox_dir)\n",
+    "    if not os.path.isdir(skybox_dir):\n",
+    "        zip_fn = os.path.join(disk_loc, house, \"matterport_skybox_images.zip\")\n",
+    "        os.system(\"unzip -o %s -d %s\" % (zip_fn, disk_loc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 91/91 [00:00<00:00, 48628.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -r /media/jdtho/shiner/JmbYfDe2QKZ\n",
+      "rm -r /media/jdtho/shiner/gZ6f7yhEvPG\n",
+      "rm -r /media/jdtho/shiner/WYY7iVyf5p8\n",
+      "rm -r /media/jdtho/shiner/rqfALeAoiTq\n",
+      "rm -r /media/jdtho/shiner/UwV83HsGsw3\n",
+      "rm -r /media/jdtho/shiner/mJXqzFtmKg4\n",
+      "rm -r /media/jdtho/shiner/ur6pFq6Qu1A\n",
+      "rm -r /media/jdtho/shiner/rPc6DW4iMge\n",
+      "rm -r /media/jdtho/shiner/D7G3Y4RVNrH\n",
+      "rm -r /media/jdtho/shiner/RPmz2sHmrrY\n",
+      "rm -r /media/jdtho/shiner/sKLMLpTHeUy\n",
+      "rm -r /media/jdtho/shiner/s8pcmisQ38h\n",
+      "rm -r /media/jdtho/shiner/q9vSo1VnCiC\n",
+      "rm -r /media/jdtho/shiner/82sE5b5pLXE\n",
+      "rm -r /media/jdtho/shiner/e9zR4mvMWw7\n",
+      "rm -r /media/jdtho/shiner/qoiz87JEwZ2\n",
+      "rm -r /media/jdtho/shiner/Uxmj2M2itWa\n",
+      "rm -r /media/jdtho/shiner/x8F5xyUWy9e\n",
+      "rm -r /media/jdtho/shiner/kEZ7cmS4wCh\n",
+      "rm -r /media/jdtho/shiner/pLe4wQe7qrG\n",
+      "rm -r /media/jdtho/shiner/HxpKQynjfin\n",
+      "rm -r /media/jdtho/shiner/X7HyMhZNoso\n",
+      "rm -r /media/jdtho/shiner/zsNo4HB9uLZ\n",
+      "rm -r /media/jdtho/shiner/ARNzJeq3xxb\n",
+      "rm -r /media/jdtho/shiner/PuKPg4mmafe\n",
+      "rm -r /media/jdtho/shiner/JF19kD82Mey\n",
+      "rm -r /media/jdtho/shiner/VVfe2KiqLaN\n",
+      "rm -r /media/jdtho/shiner/V2XKFyX4ASd\n",
+      "rm -r /media/jdtho/shiner/ULsKaCPVFJR\n",
+      "rm -r /media/jdtho/shiner/gTV8FGcVJC9\n",
+      "rm -r /media/jdtho/shiner/1LXtFkjw3qL\n",
+      "rm -r /media/jdtho/shiner/2t7WUuJeko7\n",
+      "rm -r /media/jdtho/shiner/1pXnuDYAj8r\n",
+      "rm -r /media/jdtho/shiner/wc2JMjhGNzB\n",
+      "rm -r /media/jdtho/shiner/fzynW3qQPVF\n",
+      "rm -r /media/jdtho/shiner/jh4fc5c5qoQ\n",
+      "rm -r /media/jdtho/shiner/D7N2EKCX4Sj\n",
+      "rm -r /media/jdtho/shiner/Z6MFQCViBuw\n",
+      "rm -r /media/jdtho/shiner/VLzqgDo317F\n",
+      "rm -r /media/jdtho/shiner/2n8kARJN3HM\n",
+      "rm -r /media/jdtho/shiner/2azQ1b91cZZ\n",
+      "rm -r /media/jdtho/shiner/vyrNrziPKCB\n",
+      "rm -r /media/jdtho/shiner/QUCTc6BB5sX\n",
+      "rm -r /media/jdtho/shiner/759xd9YjKW5\n",
+      "rm -r /media/jdtho/shiner/XcA2TqTSSAj\n",
+      "rm -r /media/jdtho/shiner/SN83YJsR3w2\n",
+      "rm -r /media/jdtho/shiner/r1Q1Z4BcV1o\n",
+      "rm -r /media/jdtho/shiner/oLBMNvg9in8\n",
+      "rm -r /media/jdtho/shiner/YmJkqBEsHnH\n",
+      "rm -r /media/jdtho/shiner/5LpN3gDmAk7\n",
+      "rm -r /media/jdtho/shiner/B6ByNegPMKs\n",
+      "rm -r /media/jdtho/shiner/sT4fr6TAbpF\n",
+      "rm -r /media/jdtho/shiner/YVUC4YcDtcY\n",
+      "rm -r /media/jdtho/shiner/dhjEzFoUFzH\n",
+      "rm -r /media/jdtho/shiner/GdvgFV5R1Z5\n",
+      "rm -r /media/jdtho/shiner/VzqfbhrpDEA\n",
+      "rm -r /media/jdtho/shiner/ZMojNkEp431\n",
+      "rm -r /media/jdtho/shiner/gYvKGZ5eRqb\n",
+      "rm -r /media/jdtho/shiner/17DRP5sb8fy\n",
+      "rm -r /media/jdtho/shiner/matterport_skybox_images\n",
+      "rm -r /media/jdtho/shiner/TbHJrupSAjP\n",
+      "rm -r /media/jdtho/shiner/EDJbREhghzL\n",
+      "rm -r /media/jdtho/shiner/ac26ZMwG7aT\n",
+      "rm -r /media/jdtho/shiner/r47D5H71a5s\n",
+      "rm -r /media/jdtho/shiner/pa4otMbVnkk\n",
+      "rm -r /media/jdtho/shiner/EU6Fwq7SyZv\n",
+      "rm -r /media/jdtho/shiner/jtcxE69GiFV\n",
+      "rm -r /media/jdtho/shiner/i5noydFURQK\n",
+      "rm -r /media/jdtho/shiner/gxdoqLR6rwA\n",
+      "rm -r /media/jdtho/shiner/E9uDoFAP3SH\n",
+      "rm -r /media/jdtho/shiner/5q7pvUzZiYa\n",
+      "rm -r /media/jdtho/shiner/aayBHfsNo7d\n",
+      "rm -r /media/jdtho/shiner/b8cTxDM8gDG\n",
+      "rm -r /media/jdtho/shiner/8WUmhLawc2A\n",
+      "rm -r /media/jdtho/shiner/JeFG25nYj2p\n",
+      "rm -r /media/jdtho/shiner/yqstnuAEVhm\n",
+      "rm -r /media/jdtho/shiner/Vvot9Ly1tCj\n",
+      "rm -r /media/jdtho/shiner/p5wJjkQkbXX\n",
+      "rm -r /media/jdtho/shiner/cV4RVeZvu5T\n",
+      "rm -r /media/jdtho/shiner/5ZKStnWn8Zo\n",
+      "rm -r /media/jdtho/shiner/8194nk5LbLH\n",
+      "rm -r /media/jdtho/shiner/Vt2qJdWjCF2\n",
+      "rm -r /media/jdtho/shiner/PX4nDJXEHrG\n",
+      "rm -r /media/jdtho/shiner/VFuaQ6m2Qom\n",
+      "rm -r /media/jdtho/shiner/pRbA3pwrgk9\n",
+      "rm -r /media/jdtho/shiner/uNb9QFRL6hY\n",
+      "rm -r /media/jdtho/shiner/S9hNv5qa7GM\n",
+      "rm -r /media/jdtho/shiner/Pm6F8kyY3z2\n",
+      "rm -r /media/jdtho/shiner/29hnd4uzFmX\n",
+      "rm -r /media/jdtho/shiner/7y3sRwLe3Va\n",
+      "rm -r /media/jdtho/shiner/YFuZgdQ5vWj\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for house in tqdm.tqdm(houses):\n",
+    "    policies_dir = os.path.join(\"/media/jdtho/shiner/\", house)\n",
+    "    print(\"rm -r %s\" % policies_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['JmbYfDe2QKZ',\n",
+       " 'gZ6f7yhEvPG',\n",
+       " 'WYY7iVyf5p8',\n",
+       " 'rqfALeAoiTq',\n",
+       " 'UwV83HsGsw3',\n",
+       " 'mJXqzFtmKg4',\n",
+       " 'ur6pFq6Qu1A',\n",
+       " 'rPc6DW4iMge',\n",
+       " 'D7G3Y4RVNrH',\n",
+       " 'RPmz2sHmrrY',\n",
+       " 'sKLMLpTHeUy',\n",
+       " 's8pcmisQ38h',\n",
+       " 'q9vSo1VnCiC',\n",
+       " '82sE5b5pLXE',\n",
+       " 'e9zR4mvMWw7',\n",
+       " 'qoiz87JEwZ2',\n",
+       " 'Uxmj2M2itWa',\n",
+       " 'x8F5xyUWy9e',\n",
+       " 'kEZ7cmS4wCh',\n",
+       " 'pLe4wQe7qrG',\n",
+       " 'HxpKQynjfin',\n",
+       " 'X7HyMhZNoso',\n",
+       " 'zsNo4HB9uLZ',\n",
+       " 'ARNzJeq3xxb',\n",
+       " 'PuKPg4mmafe',\n",
+       " 'JF19kD82Mey',\n",
+       " 'VVfe2KiqLaN',\n",
+       " 'V2XKFyX4ASd',\n",
+       " 'ULsKaCPVFJR',\n",
+       " 'gTV8FGcVJC9',\n",
+       " '1LXtFkjw3qL',\n",
+       " '2t7WUuJeko7',\n",
+       " '1pXnuDYAj8r',\n",
+       " 'wc2JMjhGNzB',\n",
+       " 'fzynW3qQPVF',\n",
+       " 'jh4fc5c5qoQ',\n",
+       " 'D7N2EKCX4Sj',\n",
+       " 'Z6MFQCViBuw',\n",
+       " 'VLzqgDo317F',\n",
+       " '2n8kARJN3HM',\n",
+       " '2azQ1b91cZZ',\n",
+       " 'vyrNrziPKCB',\n",
+       " 'QUCTc6BB5sX',\n",
+       " '759xd9YjKW5',\n",
+       " 'XcA2TqTSSAj',\n",
+       " 'SN83YJsR3w2',\n",
+       " 'r1Q1Z4BcV1o',\n",
+       " 'oLBMNvg9in8',\n",
+       " 'YmJkqBEsHnH',\n",
+       " '5LpN3gDmAk7',\n",
+       " 'B6ByNegPMKs',\n",
+       " 'sT4fr6TAbpF',\n",
+       " 'YVUC4YcDtcY',\n",
+       " 'dhjEzFoUFzH',\n",
+       " 'GdvgFV5R1Z5',\n",
+       " 'VzqfbhrpDEA',\n",
+       " 'ZMojNkEp431',\n",
+       " 'gYvKGZ5eRqb',\n",
+       " '17DRP5sb8fy',\n",
+       " 'matterport_skybox_images',\n",
+       " 'TbHJrupSAjP',\n",
+       " 'EDJbREhghzL',\n",
+       " 'ac26ZMwG7aT',\n",
+       " 'r47D5H71a5s',\n",
+       " 'pa4otMbVnkk',\n",
+       " 'EU6Fwq7SyZv',\n",
+       " 'jtcxE69GiFV',\n",
+       " 'i5noydFURQK',\n",
+       " 'gxdoqLR6rwA',\n",
+       " 'E9uDoFAP3SH',\n",
+       " '5q7pvUzZiYa',\n",
+       " 'aayBHfsNo7d',\n",
+       " 'b8cTxDM8gDG',\n",
+       " '8WUmhLawc2A',\n",
+       " 'JeFG25nYj2p',\n",
+       " 'yqstnuAEVhm',\n",
+       " 'Vvot9Ly1tCj',\n",
+       " 'p5wJjkQkbXX',\n",
+       " 'cV4RVeZvu5T',\n",
+       " '5ZKStnWn8Zo',\n",
+       " '8194nk5LbLH',\n",
+       " 'Vt2qJdWjCF2',\n",
+       " 'PX4nDJXEHrG',\n",
+       " 'VFuaQ6m2Qom',\n",
+       " 'pRbA3pwrgk9',\n",
+       " 'uNb9QFRL6hY',\n",
+       " 'S9hNv5qa7GM',\n",
+       " 'Pm6F8kyY3z2',\n",
+       " '29hnd4uzFmX',\n",
+       " '7y3sRwLe3Va',\n",
+       " 'YFuZgdQ5vWj']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "houses"
    ]
   },
   {
