adds stopping in correct room; adds multiple end panos with best route navigation to nearest

--- a/web/chat/scripts/extract_object_segs.ipynb
+++ b/web/chat/scripts/extract_object_segs.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90/90 [00:02<00:00, 32.75it/s]\n"
+      "100%|██████████| 90/90 [00:01<00:00, 63.44it/s]\n"
      ]
     }
    ],
@@ -171,15 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trimmed from 931 unique objects to 84\n",
-      "new object list: ['airconditioner', 'basin', 'basket', 'bathtub', 'bed', 'book', 'bookcase', 'bottle', 'bowl', 'box', 'bucket', 'candle', 'chandelier', 'chest', 'chestofdrawer', 'chimney', 'clock', 'clothesdryer', 'coatrack', 'computer', 'cushion', 'desk', 'dishwasher', 'displaycase', 'doll', 'dresser', 'easel', 'faucet', 'firealarm', 'fireextinguisher', 'fireplace', 'floorlamp', 'fridge', 'guitar', 'hanger', 'heater', 'ladder', 'lamp', 'mat', 'microwave', 'nightstand', 'ottoman', 'painting', 'papertowel', 'phone', 'photo', 'piano', 'picture', 'pillow', 'pipe', 'plant', 'plate', 'pool', 'pot', 'printer', 'rug', 'scale', 'sconce', 'screen', 'shampoo', 'shoe', 'shower', 'sign', 'sink', 'skylight', 'soap', 'sofa', 'statue', 'stool', 'stove', 'teapot', 'telephone', 'tissue', 'toilet', 'toiletbrush', 'toiletpaper', 'towel', 'toy', 'trashcan', 'tv', 'vase', 'wardrobe', 'washingmachine', 'watercooler']\n"
+      "trimmed from 931 unique objects to 83\n",
+      "new object list: ['airconditioner', 'basin', 'basket', 'bathtub', 'bed', 'book', 'bookcase', 'bottle', 'bowl', 'box', 'bucket', 'candle', 'chandelier', 'chest', 'chestofdrawer', 'chimney', 'clock', 'clothesdryer', 'coatrack', 'computer', 'cushion', 'desk', 'dishwasher', 'displaycase', 'doll', 'dresser', 'easel', 'faucet', 'firealarm', 'fireextinguisher', 'fireplace', 'floorlamp', 'fridge', 'guitar', 'hanger', 'heater', 'ladder', 'lamp', 'mat', 'microwave', 'nightstand', 'ottoman', 'painting', 'papertowel', 'phone', 'photo', 'piano', 'picture', 'pillow', 'pipe', 'plant', 'plate', 'pool', 'pot', 'rug', 'scale', 'sconce', 'screen', 'shampoo', 'shoe', 'shower', 'sign', 'sink', 'skylight', 'soap', 'sofa', 'statue', 'stool', 'stove', 'teapot', 'telephone', 'tissue', 'toilet', 'toiletbrush', 'toiletpaper', 'towel', 'toy', 'trashcan', 'tv', 'vase', 'wardrobe', 'washingmachine', 'watercooler']\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
     "# a threshold of times or are not sufficiently ambiguous within the houses in which they\n",
     "# appear.\n",
     "total_across_houses_thresh = 5  # e.g., >5% of houses (out of 90).\n",
-    "total_within_house_thresh = 2\n",
+    "total_within_house_thresh = [2, 3]  # at least two, at most four\n",
     "\n",
     "# Total count.\n",
     "counts = {}\n",
@@ -208,7 +208,7 @@
     "    for obj in house_obj_data[house]:\n",
     "        if counts[obj] >= total_across_houses_thresh:\n",
     "            amb_level = len(house_obj_data[house][obj])\n",
-    "            if total_within_house_thresh <= amb_level <= len(set(p2r[house].values())):\n",
+    "            if total_within_house_thresh[0] <= amb_level <= total_within_house_thresh[1]:\n",
     "                trimmed_house_obj_data[house][obj] = house_obj_data[house][obj]\n",
     "                if obj not in all_objs:\n",
     "                    all_objs.append(obj)\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
