added min/max step sizes; changed from meters to hops for distance calculations

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,11 @@
     "surveycode_hash = 'thowpbr_pilot0'  # pilot_jun9\n",
     "\n",
     "max_nav_len = 300\n",
-    "max_dialog_len = 50"
+    "max_dialog_len = 50\n",
+    "\n",
+    "tasks_fn = 'resources/house_target_tuple.json'\n",
+    "with open(tasks_fn, 'r') as f:\n",
+    "    house_target_tuple = json.load(f)"
    ]
   },
   {
@@ -247,32 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A2NA2OJT15COZY [] []\n",
-      "None [4, 2, 2, 4, 5, 5, 5, 5, 2, 5, 5, 2, 1, 4, 4, 1] [True, True, True, True, True, True, True, True]\n",
-      "A2RTJ6BDY0DZVZ [] []\n",
-      "A3APKUC67F9IMW [2, 4] [True]\n",
-      "A1B14CS9DW7008 [] []\n",
-      "A10JXOU89D5RXR [5, 5] [True]\n",
-      "ALF9AAZGQP4K5 [4, 2] [True]\n",
-      "A15PHPJA7AWCS3 [] []\n",
-      "A11Q8U6QTT8KGF [] []\n",
-      "A3CH1Z6J9R38G9 [4, 1] [True]\n",
-      "AAIQLE701DI9U [1, 4] [True]\n",
-      "AQOXSP4W3ITSW [] []\n",
-      "A272X64FOZFYLB [2, 5] [True]\n",
-      "A3CWEIEY3TGJFX [5, 5] [True]\n",
-      "A2OZF756R5JSG4 [] []\n",
-      "A1XUZFDVKP95VC [] []\n",
-      "A3F51C49T9A34D [] []\n",
-      "A1GKD3NG1NNHRP [] []\n",
-      "A2EKR2ZFO10VMV [5, 2] [True]\n"
+      "A3CH1Z6J9R38G9 [4] []\n",
+      "AAIQLE701DI9U [1] [True]\n",
+      "A272X64FOZFYLB [5] []\n",
+      "A3CWEIEY3TGJFX [5] [True]\n",
+      "A3APKUC67F9IMW [4] [True]\n",
+      "A10JXOU89D5RXR [5] []\n",
+      "ALF9AAZGQP4K5 [2] []\n",
+      "A2EKR2ZFO10VMV [2] [True]\n"
      ]
     }
    ],
@@ -290,6 +283,52 @@
     "    player_success[wid].extend(games[games['navigator'] == players['uid'][idx]]['success'])\n",
     "for wid in player_ratings:\n",
     "    print(wid, player_ratings[wid], player_success[wid])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: task for house wc2JMjhGNzB, target 'bathtub' missing\n",
+      "10\t6\t(0.60)\n",
+      "20\t16\t(0.80)\n",
+      "WARNING: task for house wc2JMjhGNzB, target 'bathtub' missing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nav lengths against shortest path for completed / uncompleted games.\n",
+    "for idx in games.index:\n",
+    "    player_traj_len = games['num_nav_steps'][idx]\n",
+    "    shortest_traj_len = None\n",
+    "    for obj, start_pano, _, end_panos, end_pano_ds in house_target_tuple[games['house'][idx]]:\n",
+    "        if (start_pano == games['start_pano'][idx] and\n",
+    "                obj == games['target'][idx] and\n",
+    "                set(end_panos) == set(games['end_panos'][idx])):\n",
+    "            shortest_traj_len = min(end_pano_ds)\n",
+    "    if shortest_traj_len is not None:\n",
+    "        print(\"%d\\t%d\\t(%.2f)\" % (player_traj_len, shortest_traj_len, float(shortest_traj_len / player_traj_len)))\n",
+    "    else:\n",
+    "        print(\"WARNING: task for house %s, target '%s' missing\" % (games['house'][idx], games['target'][idx]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO - Nav lengths against dialog lengths for completed games\n",
+    "# TODO - distribution of dialog lengths\n",
+    "# TODO - language fertility analyses\n",
+    "    # TODO - 1-grams\n",
+    "    # TODO - differences between questioner and answerer\n",
+    "    # TODO - question/answer length as dialog grows longer"
    ]
   },
   {
