--- a/web/chat/scripts/examine_task_tuples.ipynb
+++ b/web/chat/scripts/examine_task_tuples.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -73,12 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1629\n",
-      "18.210558624923266 6.6787541612565535\n",
-      "4.853050302410159 31.56806694743637\n",
-      "5798\n",
-      "6.002414625733011 0.8492805017698207\n",
-      "4.30385362219337 7.700975629272652\n"
+      "MPD average hops:\t18.21+/-6.68, (n=1629)\n",
+      "MP R2R average hops:\t6.00+/-0.85, (n=5798)\n"
      ]
     }
    ],
@@ -121,17 +117,8 @@
     "ax.set(yscale=\"log\")\n",
     "plt.show()\n",
     "\n",
-    "mean = np.mean(task_ds)\n",
-    "stddev = np.std(task_ds)\n",
-    "print(len(task_ds))\n",
-    "print(mean, stddev)\n",
-    "print(mean-2*stddev, mean+2*stddev)\n",
-    "\n",
-    "mean = np.mean(mp_ds)\n",
-    "stddev = np.std(mp_ds)\n",
-    "print(len(mp_ds))\n",
-    "print(mean, stddev)\n",
-    "print(mean-2*stddev, mean+2*stddev)"
+    "print(\"MPD average hops:\\t%.2f+/-%.2f, (n=%d)\" % (np.mean(task_ds), np.std(task_ds), len(task_ds)))\n",
+    "print(\"MP R2R average hops:\\t%.2f+/-%.2f, (n=%d)\" % (np.mean(mp_ds), np.std(mp_ds), len(mp_ds)))"
    ]
   },
   {
